--- a/index.html
+++ b/index.html
@@ -41,21 +41,12 @@
         padding: 0;
         box-sizing: border-box;
       }
-      header {
-        background-color: #ffffff;
-        color: white;
-        padding: 1rem 0;
-      }
-      header .container {
+      nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        max-width: 1200px;
-        margin: auto;
-        padding: 0 1rem;
-      }
-      header h1 {
-        margin: 0;
+        padding: 1rem 2rem;
+        border-bottom: solid 2px rgb(4, 138, 24);
       }
       nav ul {
         list-style: none;
@@ -66,13 +57,21 @@
       nav ul li {
         margin-left: 2rem;
       }
-      nav ul li a {
-        color: black;
+      nav .brand {
+        font-weight: bolder;
+      }
+      nav ul a {
         text-decoration: none;
+        color: rgb(6, 67, 28);
+        padding: 0.5rem 1rem;
+      }
+      nav ul .active {
+        text-decoration: underline;
+      }
+      .main-section {
+        margin: 2rem;
       }
       .hero {
-        background: url("https://via.placeholder.com/1200x600") no-repeat center
-          center/cover;
         height: 600px;
         color: black;
         display: flex;
@@ -93,9 +92,9 @@
         margin-top: 1rem;
         padding: 1rem 2rem;
         background-color: green;
-        color: white;
         text-decoration: none;
         border-radius: 5px;
+        color: white;
       }
       footer {
         border-top: solid 1px rgb(8, 31, 2);
@@ -110,20 +109,17 @@
     </style>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1>Welcome Page</h1>
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="./public/index.php">Login</a></li>
-            <li><a href="./public/votter/register.php">signup</a></li>
-            <li><a href="#contuct">Contact</a></li>
-          </ul>
-        </nav>
+    <nav>
+      <div class="brand">
+        SMART <span style="color: green">ONLINE</span> VOTE
       </div>
-    </header>
-
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="./public/index.php">Login</a></li>
+        <li><a href="./public/votter/register.php">signup</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     <section class="hero" id="home">
       <div>
         <h2>Welcome to Our Website</h2>
@@ -134,7 +130,7 @@
         <a href="./public/index.php">Get Started</a>
       </div>
     </section>
-    <section class="contact-section">
+    <section class="contact-section" id="contact">
       <h2>Contact Us</h2>
       <div class="contact-info">
         <p>
